--- a/index.html
+++ b/index.html
@@ -357,7 +357,8 @@
                   <img src="./img/reviews/slider-mini-photo-3.png" alt="#">
                   <img src="./img/reviews/slider-mini-photo-4.png" alt="#">
                 </div>
-                <p class="reviews__support desktop-hide tablet-hide mobile-show">Нажми на фотографию, чтобы читать следующий отзыв</p>
+                <p class="reviews__support">
+                  <span class="reviews__support-icon"><img src="./img/icon-finger.svg" alt="#"></span>Нажми на фотографию, чтобы читать следующий отзыв</p>
               </div>
             </div>
           </div>
