якорное мобильное меню и доработка стилей модального окна

--- a/index.html
+++ b/index.html
@@ -80,22 +80,22 @@
         <nav>
           <ul class="mobile-nav__list list-reset">
             <li class="mobile-nav__item">
-              <a href="#" class="mobile-nav__link">
+              <a href="#advantages-section" class="mobile-nav__link" data-anchor="true">
                 <span>Преимущества</span>
               </a>
             </li>
             <li class="mobile-nav__item">
-              <a href="#" class="mobile-nav__link">
+              <a href="#steps-section" class="mobile-nav__link" data-anchor="true">
                 <span>Как это работает?</span>
               </a>
             </li>
             <li class="mobile-nav__item">
-              <a href="#" class="mobile-nav__link">
+              <a href="#reviews-section" class="mobile-nav__link" data-anchor="true">
                 <span>Отзывы</span>
               </a>
             </li>
             <li class="mobile-nav__item">
-              <a href="#" class="mobile-nav__link">
+              <a href="#services-section" class="mobile-nav__link" data-anchor="true">
                 <span>Цены</span>
               </a>
             </li>
