--- a/index.html
+++ b/index.html
@@ -338,115 +338,118 @@
           </div>
           <div class="section__body">
             <div class="reviews__group">
-            <div class="reviews__slider-big js-reviews-slider-big">
+              <div class="reviews__slider-big js-reviews-slider-big">
 
-              <!-- Swiper -->
-              <div class="swiper">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">
-                    <div class="reviews__slide">
-                      <div class="reviews__photo-big">
-                        <img src="./img/reviews/slider-big-photo-1.png" alt="#">
-                      </div>
-                      <div class="reviews__text">
-                        <span>#1</span>
-                        <h3>Cпа салон «Красная Роза»</h3>
-                        <blockquote>«Мы любим животных и стараемся поддерживать тех из них, кому не посчастливилось
-                          иметь
-                          ласковых
-                          хозяев и тёплый кров. Один из проверенных способов это сделать — помочь благотворительному
-                          фонду <a href="#">«Луч Добра»</a>. Благодаря их труду ежегодно сотни питомцев находят свой
-                          новый
-                          дом.»</blockquote>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="swiper-slide">
-                    <div class="reviews__slide">
-                      <div class="reviews__photo-big">
-                        <img src="./img/reviews/slider-big-photo-2.png" alt="#">
-                      </div>
-                      <div class="reviews__text">
-                        <span>#2</span>
-                        <h3>Cпа салон «Красная Роза»</h3>
-                        <blockquote>«Мы любим животных и стараемся поддерживать тех из них, кому не посчастливилось
-                          иметь
-                          ласковых
-                          хозяев и тёплый кров. Один из проверенных способов это сделать — помочь благотворительному
-                          фонду <a href="#">«Луч Добра»</a>. Благодаря их труду ежегодно сотни питомцев находят свой
-                          новый
-                          дом.»</blockquote>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="swiper-slide">
-                    <div class="reviews__slide">
-                      <div class="reviews__photo-big">
-                        <img src="./img/reviews/slider-big-photo-3.png" alt="#">
-                      </div>
-                      <div class="reviews__text">
-                        <span>#3</span>
-                        <h3>Cпа салон «Красная Роза»</h3>
-                        <blockquote>«Мы любим животных и стараемся поддерживать тех из них, кому не посчастливилось
-                          иметь
-                          ласковых
-                          хозяев и тёплый кров. Один из проверенных способов это сделать — помочь благотворительному
-                          фонду <a href="#">«Луч Добра»</a>. Благодаря их труду ежегодно сотни питомцев находят свой
-                          новый
-                          дом.»</blockquote>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="swiper-slide">
-                    <div class="reviews__slide">
-                      <div class="reviews__photo-big">
-                        <img src="./img/reviews/slider-big-photo-4.png" alt="#">
-                      </div>
-                      <div class="reviews__text">
-                        <span>#4</span>
-                        <h3>Cпа салон «Красная Роза»</h3>
-                        <blockquote>«Мы любим животных и стараемся поддерживать тех из них, кому не посчастливилось
-                          иметь
-                          ласковых
-                          хозяев и тёплый кров. Один из проверенных способов это сделать — помочь благотворительному
-                          фонду <a href="#">«Луч Добра»</a>. Благодаря их труду ежегодно сотни питомцев находят свой
-                          новый
-                          дом.»</blockquote>
-                      </div>
-                    </div>
-                  </div>
-
-                </div>
-              </div>
-            </div>
-
-            <div class="reviews__thumbs">
-              <div class="reviews__slider-min js-reviews-slider-min">
                 <!-- Swiper -->
                 <div class="swiper">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <img src="./img/reviews/slider-mini-photo-1.png" alt="#">
+                      <div class="reviews__slide">
+                        <div class="reviews__photo-big">
+                          <img src="./img/reviews/slider-big-photo-1.png" alt="#">
+                        </div>
+                        <div class="reviews__text">
+                          <span>#1</span>
+                          <h3>Cпа салон «Красная Роза»</h3>
+                          <blockquote>«Мы любим животных и стараемся поддерживать тех из них, кому не посчастливилось
+                            иметь
+                            ласковых
+                            хозяев и тёплый кров. Один из проверенных способов это сделать — помочь благотворительному
+                            фонду <a href="#">«Луч Добра»</a>. Благодаря их труду ежегодно сотни питомцев находят свой
+                            новый
+                            дом.»</blockquote>
+                        </div>
+                      </div>
                     </div>
                     <div class="swiper-slide">
-                      <img src="./img/reviews/slider-mini-photo-2.png" alt="#">
+                      <div class="reviews__slide">
+                        <div class="reviews__photo-big">
+                          <img src="./img/reviews/slider-big-photo-2.png" alt="#">
+                        </div>
+                        <div class="reviews__text">
+                          <span>#2</span>
+                          <h3>Cпа салон «Красная Роза»</h3>фыв
+                          <blockquote>«Мы любим животных и стараемся поддерживать тех из них, кому не посчастливилось
+                            иметь
+                            ласковых
+                            хозяев и тёплый кров. Один из проверенных способов это сделать — помочь благотворительному
+                            фонду <a href="#">«Луч Добра»</a>. Благодаря их труду ежегодно сотни питомцев находят свой
+                            новый
+                            дом.»</blockquote>
+                        </div>
+                      </div>
                     </div>
                     <div class="swiper-slide">
-                      <img src="./img/reviews/slider-mini-photo-3.png" alt="#">
+                      <div class="reviews__slide">
+                        <div class="reviews__photo-big">
+                          <img src="./img/reviews/slider-big-photo-3.png" alt="#">
+                        </div>
+                        <div class="reviews__text">
+                          <span>#3</span>
+                          <h3>Cпа салон «Красная Роза»</h3>
+                          <blockquote>«Мы любим животных и стараемся поддерживать тех из них, кому не посчастливилось
+                            иметь
+                            ласковых
+                            хозяев и тёплый кров. Один из проверенных способов это сделать — помочь благотворительному
+                            фонду <a href="#">«Луч Добра»</a>. Благодаря их труду ежегодно сотни питомцев находят свой
+                            новый
+                            дом.»</blockquote>
+                        </div>
+                      </div>
                     </div>
                     <div class="swiper-slide">
-                      <img src="./img/reviews/slider-mini-photo-4.png" alt="#">
+                      <div class="reviews__slide">
+                        <div class="reviews__photo-big">
+                          <img src="./img/reviews/slider-big-photo-4.png" alt="#">
+                        </div>
+                        <div class="reviews__text">
+                          <span>#4</span>
+                          <h3>Cпа салон «Красная Роза»</h3>
+                          <blockquote>«Мы любим животных и стараемся поддерживать тех из них, кому не посчастливилось
+                            иметь
+                            ласковых
+                            хозяев и тёплый кров. Один из проверенных способов это сделать — помочь благотворительному
+                            фонду <a href="#">«Луч Добра»</a>. Благодаря их труду ежегодно сотни питомцев находят свой
+                            новый
+                            дом.»</blockquote>
+                        </div>
+                      </div>
                     </div>
 
                   </div>
+
+                  <div class="swiper-button-next"></div>
+                  <div class="swiper-button-prev"></div>
                 </div>
               </div>
-              <p class="reviews__support">
-                <span class="reviews__support-icon"><img src="./img/icon-finger.svg" alt="#"></span>Нажми на
-                фотографию, чтобы читать следующий отзыв
-              </p>
+
+              <div class="reviews__thumbs">
+                <div class="reviews__slider-min js-reviews-slider-min">
+                  <!-- Swiper -->
+                  <div class="swiper">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide">
+                        <img src="./img/reviews/slider-mini-photo-1.png" alt="#">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="./img/reviews/slider-mini-photo-2.png" alt="#">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="./img/reviews/slider-mini-photo-3.png" alt="#">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="./img/reviews/slider-mini-photo-4.png" alt="#">
+                      </div>
+
+                    </div>
+                  </div>
+                </div>
+                <p class="reviews__support">
+                  <span class="reviews__support-icon"><img src="./img/icon-finger.svg" alt="#"></span>Нажми на
+                  фотографию, чтобы читать следующий отзыв
+                </p>
+              </div>
             </div>
-          </div>
 
 
           </div>
