--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
   <link rel="stylesheet" href="./libs/swiper-bundle.min.css">
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/main.css?v=2.0">
 
 
 </head>
