Доработка мобильного меню

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
   <link rel="stylesheet" href="./libs/swiper-bundle.min.css">
-  <link rel="stylesheet" href="./css/main.css?v=2.0">
+  <link rel="stylesheet" href="./css/main.css?v=3.0">
 
 
 </head>
@@ -117,7 +117,7 @@
         <a href="#" class="button button--mod click" data-target="modal-call-back"><span>Заказать
             консультацию</span></a>
 
-        <a href="#" class="button click" data-target="modal-call-back"><span>Оставить заявку</span></a>
+        <!-- <a href="#" class="button click" data-target="modal-call-back"><span>Оставить заявку</span></a> -->
       </div>
 
     </div>
